[package]
name = "ls"
version = "0.1.0"
authors = ["Shenghan Gao <gaoshenghan199123@gmail.com>"]

[lib]
name = "uu_ls"
path = "ls.rs"

[dependencies]
getopts = "*"
libc = "*"
uucore = { path="../uucore" }

[target.'cfg(windows)'.dependencies]
winapi = "0.2"
kernel32-sys = "0.2"

[[bin]]
name = "ls"
path = "main.rs"
